--- a/backend/package.json
+++ b/backend/package.json
@@ -19,9 +19,11 @@
     "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "download-pdf": "^0.1.6",
     "express": "^4.18.2",
     "express-validator": "^6.14.0",
     "fs": "^0.0.1-security",
+    "http-status": "^1.4.0",
     "joi": "^17.7.0",
     "js-sha512": "^0.8.0",
     "jsonwebtoken": "^8.5.1",
@@ -31,7 +33,9 @@
     "nodemailer": "^6.8.0",
     "nodemailer-express-handlebars": "^5.0.0",
     "path": "^0.12.7",
+    "razorpay": "^2.8.4",
     "sequelize": "^6.11.0",
+    "shortid": "^2.2.16",
     "uuid": "^9.0.0"
   }
 }
