--- a/bajpaicumputer/package.json
+++ b/bajpaicumputer/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "moment": "^2.29.4",
     "moment-js": "^1.1.15",
     "react": "^18.2.0",
@@ -18,6 +19,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.13",
     "sweetalert2": "^11.7.12",
     "web-vitals": "^2.1.4"
   },
