--- a/bajpaicumputer/package.json
+++ b/bajpaicumputer/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.29.4",
     "moment-js": "^1.1.15",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.12.1",
